src/objects/External_Report__c.object
<CustomObject>
    <description>External Reports are attached to Custom Record Type in External Report custom object. Can be any external file/content and does not have to be limited to CSAT data.</description>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>BusinessUSA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA.GOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoS.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExIm.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FWS.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GobiernoUSA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GovLoans.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSA.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kids.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare Subsidy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Report_Notes__c</fullName>
        <label>Report Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>CSAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Narrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>External Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Reports</pluralLabel>
    <recordTypes>
        <fullName>USA_gov</fullName>
        <active>true</active>
        <description>Record type for USA.gov portal users</description>
        <label>USA.gov</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>